[project]
name = "riot-api-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryu Juheon",email = "saidbysolo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sanic (>=25.3.0,<26.0.0)",
    "sanic-ext (>=24.12.0,<25.0.0)",
    "aiohttp (>=3.12.12,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
